--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,119 @@
 accelerate==1.6.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiosignal==1.3.2
+annotated-types==0.7.0
+appdirs==1.4.4
+arrow==1.3.0
+async-timeout==5.0.1
+attrs==25.3.0
+Cerberus==1.3.7
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
+cloudpickle==3.1.1
+coloredlogs==15.0.1
+Cython==3.0.12
+datasets==3.5.0
+dill==0.3.8
+docker-pycreds==0.4.0
+docopt==0.6.2
+eval_type_backport==0.2.2
+evaluate==0.4.3
 filelock==3.18.0
-fsspec==2025.3.2
-huggingface-hub==0.30.2
+flatbuffers==25.2.10
+frozenlist==1.5.0
+fsspec==2024.12.0
+gitdb==4.0.12
+GitPython==3.1.44
+h5py==3.13.0
+huggingface-hub==0.30.1
+humanfriendly==10.0
 idna==3.10
+inform==1.33
 Jinja2==3.1.6
+joblib==1.4.2
 MarkupSafe==3.0.2
+ml_dtypes==0.5.1
 mpmath==1.3.0
-networkx==3.4.2
-numpy==2.2.4
+multidict==6.2.0
+multiprocess==0.70.16
+networkx==3.2.1
+numpy==2.0.2
+nvidia-cublas-cu11==11.11.3.6
 nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu11==11.8.87
 nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu11==11.8.89
 nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu11==11.8.89
 nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu11==9.1.0.70
 nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu11==10.9.0.58
 nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu11==10.3.0.86
 nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu11==11.4.1.48
 nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu11==11.7.5.86
 nvidia-cusparse-cu12==12.3.1.170
 nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu11==2.21.5
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu11==11.8.86
 nvidia-nvtx-cu12==12.4.127
+onnx==1.17.0
+onnxruntime==1.16.3
+onnxruntime-training==1.19.2
+optimum==1.24.0
 packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
+platformdirs==4.3.7
+propcache==0.3.1
+protobuf==5.29.4
 psutil==7.0.0
+pyarrow==19.0.1
+pydantic==2.11.2
+pydantic_core==2.33.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
+quantiphy==2.20
 regex==2024.11.6
 requests==2.32.3
+sacremoses==0.1.1
 safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.13.1
+sentry-sdk==2.25.1
+setproctitle==1.3.5
 six==1.17.0
+smmap==5.0.2
 sympy==1.13.1
+tensorrt==10.7.0.post1
+tensorrt-cu12-bindings==10.7.0.post1
+tensorrt-cu12-libs==10.7.0.post1
+tensorrt_cu12==10.7.0.post1
+threadpoolctl==3.6.0
 tokenizers==0.21.1
-torch==2.1.0+cu118
-torchaudio==2.1.0+cu118
-torchvision==0.16.0+cu118
+torch==2.6.0+cu118
+torch-ort==1.16.0
+torch_tensorrt==2.6.0
+torchaudio==2.6.0+cu118
+torchvision==0.21.0+cu118
+tornado==6.4.2
 tqdm==4.67.1
-transformers==4.51.3
-triton==2.1.0
-typing_extensions==4.13.2
+transformers==4.48.3
+triton==3.2.0
+-e git+https://github.com/apache/tvm.git@c211e482bee8ebd139e8c58624e18c988b4ec4b2#egg=tvm&subdirectory=python
+types-python-dateutil==2.9.0.20241206
+typing-inspection==0.4.0
+typing_extensions==4.13.1
 tzdata==2025.2
-urllib3==2.4.0
+urllib3==2.3.0
+wandb==0.19.9
+xxhash==3.5.0
+yarl==1.18.3
